<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/action_bar_const"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:layout_alignParentLeft="true"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/info_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:layout_below="@+id/action_bar_const"
        android:text="@string/contact" />

    <TextView
        android:id="@+id/info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:layout_below="@+id/info_contact"
        android:text="@string/name" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:layout_below="@+id/info_name"
        android:text="@string/information_text" />

    <TextView
        android:id="@+id/info_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:layout_below="@+id/info_text"
        android:text="@string/information_text_2" />

    <TextView
        android:id="@+id/info_text_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:layout_below="@+id/info_text_2"
        android:text="@string/rate" />


</RelativeLayout>